# xxinit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
executable/: CMakeLists.txt  main.cxx
executable/include/: greet.hxx
executable/src/: greet.cxx  main.cxx
